# diffvg

./: pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
