[project]
name = "diffvg"
version = "0.1.0"
description = ""
authors = [{ name = "Marco Lee", email = "marco@goodnotesapp.com" }]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy>=1.20.2,<2",
    "scikit-image>=0.19.3",
    "cssutils>=2.2.0",
    "svgpathtools>=1.4.1",
    "wheel>=0.45.1",
    "setuptools>=75.3.0",
    "cmake>=3.18.4,<4",
]

[dependency-groups]
dev = [
    "svgwrite>=1.4.1,<2",
    "numba>=0.55.2",
    "torch-tools>=0.1.5,<0.2",
    "visdom>=0.1.8",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffvg"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
